[gd_scene load_steps=43 format=2]

[ext_resource path="res://Sprites/Logo.png" type="Texture" id=1]
[ext_resource path="res://Main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/Menu.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Fade.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Font3.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/RadialLight.png" type="Texture" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartGame/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("About/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Exit/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Exit/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StartGame/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartGame/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StartGame/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartGame/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[sub_resource type="Animation" id=12]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("About/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=13]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("About/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=14]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Exit/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=15]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Exit/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=16]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Options/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=17]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Options/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[sub_resource type="Animation" id=18]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StartGame/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=19]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StartGame/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=20]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("About/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("About/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=21]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("About/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("About/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[sub_resource type="Animation" id=22]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Exit/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=23]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Exit/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=24]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=25]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=26]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StartGame/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=27]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StartGame/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=28]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=29]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("About/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=30]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Exit/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Exit/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=31]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Exit/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Exit/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[sub_resource type="Animation" id=32]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=33]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=34]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StartGame/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}

[sub_resource type="Animation" id=35]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StartGame/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}

[node name="MainMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -300.0
margin_right = 350.0
margin_bottom = 300.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -350.0
margin_right = 350.0
margin_bottom = 350.0
rect_min_size = Vector2( 700, 700 )
texture = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="TextureRect"]
position = Vector2( 250, 160 )
scale = Vector2( 1.8, 0.8 )
texture = ExtResource( 7 )
color = Color( 0.784314, 0.784314, 1, 1 )
energy = 3.0

[node name="Light2D2" type="Light2D" parent="TextureRect"]
position = Vector2( 545, 160 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 7 )
color = Color( 1, 0, 0, 1 )
energy = 5.0

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -250.0
margin_right = 300.0
margin_bottom = 250.0
mouse_filter = 2
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
material = SubResource( 1 )
margin_right = 600.0
margin_bottom = 130.0
rect_min_size = Vector2( 600, 130 )
texture = ExtResource( 1 )
stretch_mode = 1

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_top = 150.0
margin_right = 600.0
margin_bottom = 500.0
mouse_filter = 2
custom_constants/separation = 10

[node name="StartGame" type="Button" parent="Menu/Buttons"]
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="Menu/Buttons/StartGame"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 10
text = "START_GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Buttons/StartGame"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 7 )
energy = 0.0

[node name="Options" type="Button" parent="Menu/Buttons"]
margin_top = 90.0
margin_right = 600.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 80 )
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="Menu/Buttons/Options"]
material = SubResource( 3 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Buttons/Options"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 7 )
energy = 0.0

[node name="About" type="Button" parent="Menu/Buttons"]
margin_top = 180.0
margin_right = 600.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 80 )
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="Menu/Buttons/About"]
material = SubResource( 3 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "ABOUT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Buttons/About"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 7 )
energy = 0.0

[node name="Exit" type="Button" parent="Menu/Buttons"]
margin_top = 270.0
margin_right = 600.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 80 )
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="Menu/Buttons/Exit"]
material = SubResource( 3 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "EXIT_GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Buttons/Exit"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 7 )
energy = 0.0

[node name="StartGameA" type="AnimationPlayer" parent="Menu/Buttons"]
anims/AboutIn = SubResource( 4 )
anims/AboutOut = SubResource( 5 )
anims/ExitIn = SubResource( 6 )
anims/ExitOut = SubResource( 7 )
anims/OptionsIn = SubResource( 8 )
anims/OptionsOut = SubResource( 9 )
anims/StartGameIn = SubResource( 10 )
anims/StartGameOut = SubResource( 11 )

[node name="OptionsA" type="AnimationPlayer" parent="Menu/Buttons"]
anims/AboutIn = SubResource( 12 )
anims/AboutOut = SubResource( 13 )
anims/ExitIn = SubResource( 14 )
anims/ExitOut = SubResource( 15 )
anims/OptionsIn = SubResource( 16 )
anims/OptionsOut = SubResource( 17 )
anims/StartGameIn = SubResource( 18 )
anims/StartGameOut = SubResource( 19 )

[node name="AboutA" type="AnimationPlayer" parent="Menu/Buttons"]
anims/AboutIn = SubResource( 20 )
anims/AboutOut = SubResource( 21 )
anims/ExitIn = SubResource( 22 )
anims/ExitOut = SubResource( 23 )
anims/OptionsIn = SubResource( 24 )
anims/OptionsOut = SubResource( 25 )
anims/StartGameIn = SubResource( 26 )
anims/StartGameOut = SubResource( 27 )

[node name="ExitA" type="AnimationPlayer" parent="Menu/Buttons"]
anims/AboutIn = SubResource( 28 )
anims/AboutOut = SubResource( 29 )
anims/ExitIn = SubResource( 30 )
anims/ExitOut = SubResource( 31 )
anims/OptionsIn = SubResource( 32 )
anims/OptionsOut = SubResource( 33 )
anims/StartGameIn = SubResource( 34 )
anims/StartGameOut = SubResource( 35 )

[node name="Fade" parent="." instance=ExtResource( 4 )]
mouse_filter = 2
[connection signal="mouse_entered" from="Menu/Buttons/StartGame" to="." method="_on_StartGame_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/StartGame" to="." method="_on_StartGame_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="mouse_entered" from="Menu/Buttons/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/Options" to="." method="_on_Options_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="Menu/Buttons/About" to="." method="_on_About_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/About" to="." method="_on_About_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/About" to="." method="_on_About_pressed"]
[connection signal="mouse_entered" from="Menu/Buttons/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/Exit" to="." method="_on_Exit_pressed"]
